# study-repo

./: README.md
algorithms/: README.md
fastapi/: README.md  pyproject.toml
fastapi/01_basics/: main.py
fastapi/02_request_body/: main.py
fastapi/03_dependency_injection/: main.py
fastapi/04_async/: main.py
fastapi/05_database/: database.py  main.py  models.py  schemas.py
fastapi/06_auth/: auth.py  main.py
fastapi/07_testing/: app.py  test_app.py
